# systemdpy

./: .gitignore  README.md  pyproject.toml
systemdpy/: __init__.py  systemd.py  systemd_models.py
