[tool.poetry]
name = "systemdpy"
version = "0.1.0"
description = "Пакет для создания systemd таймеров и сервисов"
authors = ["Elson <magomed.ibragimov@sofitlabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
